Fri Feb 16 19:26:00 GMT 2007  Olly Betts <olly@survex.com>

	* queryparser/utf8itor.cc: Fix bug in decoding of 4 byte utf-8
	  sequences - the returned value was 0x400000 too large!

Thu Feb 15 19:37:26 GMT 2007  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony,tests/queryparsertest.cc: Keep
	  embedded apostrophe's in terms rather than generating a phrase
	  search for them.

Thu Feb 15 18:42:49 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c,languages/steminternal.cc,
	  languages/steminternal.h: Tweak the "grouping" functions to allow
	  skipping past multiple occurences and use this to implement "goto"
	  or "gopast" followed by a grouping or "non" grouping more
	  efficiently.

Thu Feb 15 17:57:43 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c,languages/steminternal.cc,
	  languages/steminternal.h: Inline lose_s().  Since lose_s()
	  checks if p is NULL, remove checks prior to calling lose_s().
	* languages/steminternal.h: Cast from symbol * to int * via
	  void * to try to suppress over-eager warnings about alignment.

Thu Feb 15 12:43:04 GMT 2007  Olly Betts <olly@survex.com>

	* languages/stem.cc: Add support for two letter ISO 639 codes.

Thu Feb 15 10:40:40 GMT 2007  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Don't try to ship mkdoc.pl.

Thu Feb 15 09:58:48 GMT 2007  Olly Betts <olly@survex.com>

	* docs/gen_codestructure_doc.in: Fix to work in a VPATH build.

Thu Feb 15 09:54:55 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c: Fix Stem::get_description() to
	  return the right string.

Thu Feb 15 09:44:54 GMT 2007  Olly Betts <olly@survex.com>

	* docs/gen_codestructure_doc.in: Add links to viewvcs on
	  svn.xapian.org.

Thu Feb 15 09:26:07 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac,docs/Makefile.am,docs/gen_codestructure_doc.in,
	  docs/mkdoc.pl,preautoreconf: Rework how code_structure.html