@@ -1,3 +1,10 @@
+Fri Feb 16 19:51:26 GMT 2007  Olly Betts <olly@survex.com>
+
+	* queryparser/tclUniData.h,queryparser/utf8itor.h: The tcl unicode
+	  routines only have tables for characters in the BMP.  For other
+	  characters, assume they're word characters, but can't be forced to
+	  lowercase.
+
 Fri Feb 16 19:26:00 GMT 2007  Olly Betts <olly@survex.com>
 
 	* queryparser/utf8itor.cc: Fix bug in decoding of 4 byte utf-8
